--- a/spec/vcr_cassettes/Metabase_Endpoint_Session/login/incorrect_username_or_password/raises_error.yml
+++ b/spec/vcr_cassettes/Metabase_Endpoint_Session/login/incorrect_username_or_password/raises_error.yml
@@ -5,10 +5,10 @@ http_interactions:
     uri: http://localhost:3030/api/session
     body:
       encoding: UTF-8
-      string: '{"username":"mb@example.com","password":"p@ssw0rd"}'
+      string: '{"username":"mb@example.com","password":"incorrect"}'
     headers:
       User-Agent:
-      - Faraday v0.15.1
+      - MetabaseRuby/0.1.0 (ruby2.5.1)
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -17,28 +17,28 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 400
+      message: Bad Request
     headers:
       Date:
-      - Sat, 12 May 2018 10:52:35 GMT
+      - Sun, 13 May 2018 00:21:28 GMT
       Cache-Control:
       - max-age=0, no-cache, must-revalidate, proxy-revalidate
       Expires:
       - Tue, 03 Jul 2001 06:00:00 GMT
       Last-Modified:
-      - Sat, 12 May 2018 10:52:35 +0000
+      - Sun, 13 May 2018 00:21:28 +0000
       Strict-Transport-Security:
       - max-age=31536000
       Content-Type:
       - application/json; charset=utf-8
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '55'
       Server:
       - Jetty(9.2.z-SNAPSHOT)
     body:
-      encoding: ASCII-8BIT
-      string: '{"id":"ac4bea80-0d25-44e4-ba60-6eaeda0abd68"}'
+      encoding: UTF-8
+      string: '{"errors":{"password":"did not match stored password"}}'
     http_version: 
-  recorded_at: Sat, 12 May 2018 10:52:30 GMT
+  recorded_at: Sun, 13 May 2018 00:21:26 GMT
 recorded_with: VCR 4.0.0
