--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ Style/Documentation:
 Metrics/BlockLength:
   Exclude:
     - spec/**/*.rb
+    - '*.gemspec'
 
 Metrics/CyclomaticComplexity:
   Exclude:
