--- a/spec/vcr_cassettes/Metabase_Endpoint_Session/logout/not_logged_in/raises_error.yml
+++ b/spec/vcr_cassettes/Metabase_Endpoint_Session/logout/not_logged_in/raises_error.yml
@@ -8,35 +8,49 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - MetabaseRuby/0.1.0 (ruby2.5.1)
+      - MetabaseRuby/0.4.0 (ruby2.7.1)
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 400
-      message: Bad Request
+      code: 404
+      message: Not Found
     headers:
       Date:
-      - Tue, 22 May 2018 14:07:33 GMT
-      Cache-Control:
-      - max-age=0, no-cache, must-revalidate, proxy-revalidate
-      Expires:
-      - Tue, 03 Jul 2001 06:00:00 GMT
+      - Sun, 07 Jun 2020 06:55:08 GMT
+      X-Frame-Options:
+      - DENY
+      X-Xss-Protection:
+      - 1; mode=block
       Last-Modified:
-      - Tue, 22 May 2018 14:07:33 +0000
+      - Sun, 7 Jun 2020 06:55:08 GMT
       Strict-Transport-Security:
       - max-age=31536000
+      X-Permitted-Cross-Domain-Policies:
+      - none
+      Cache-Control:
+      - max-age=0, no-cache, must-revalidate, proxy-revalidate
+      X-Content-Type-Options:
+      - nosniff
+      Content-Security-Policy:
+      - default-src 'none'; script-src 'self' 'unsafe-eval' https://maps.google.com
+        https://apis.google.com https://www.google-analytics.com https://*.googleapis.com
+        *.gstatic.com  'sha256-lMAh4yjVuDkQ9NqkK4H+YHUga+anpFs5JAuj/uZh0Rs=' 'sha256-sMNbXyc1lLzhHbH/CKs11HIQMnMkZAN2eA99WhJeEC0='
+        'sha256-JJa56hyDfUbgNfq+0nq6Qs866JKgZ/+qCq2pkDJED8k='; child-src 'self' https://accounts.google.com;
+        style-src 'self' 'unsafe-inline'; font-src 'self' ; img-src * 'self' data:;
+        connect-src 'self' metabase.us10.list-manage.com ; manifest-src 'self';
       Content-Type:
-      - application/json; charset=utf-8
+      - text/plain
+      Expires:
+      - Tue, 03 Jul 2001 06:00:00 GMT
       Content-Length:
-      - '61'
+      - '10'
       Server:
-      - Jetty(9.2.z-SNAPSHOT)
+      - Jetty(9.4.27.v20200227)
     body:
       encoding: UTF-8
-      string: '{"errors":{"session_id":"value must be a non-blank string."}}'
-    http_version: 
-  recorded_at: Tue, 22 May 2018 14:07:29 GMT
-recorded_with: VCR 4.0.0
+      string: Not found.
+  recorded_at: Sun, 07 Jun 2020 06:55:08 GMT
+recorded_with: VCR 6.0.0
