--- a/spec/vcr_cassettes/Metabase_Endpoint_Session/logout/success/returns_true.yml
+++ b/spec/vcr_cassettes/Metabase_Endpoint_Session/logout/success/returns_true.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: '{"username":"mb@example.com","password":"p@ssw0rd"}'
     headers:
       User-Agent:
-      - MetabaseRuby/0.1.0 (ruby2.5.1)
+      - MetabaseRuby/0.4.0 (ruby2.7.1)
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -21,37 +21,54 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 22 May 2018 14:07:33 GMT
-      Cache-Control:
-      - max-age=0, no-cache, must-revalidate, proxy-revalidate
-      Expires:
-      - Tue, 03 Jul 2001 06:00:00 GMT
+      - Sun, 07 Jun 2020 06:55:08 GMT
+      X-Frame-Options:
+      - DENY
+      X-Xss-Protection:
+      - 1; mode=block
       Last-Modified:
-      - Tue, 22 May 2018 14:07:33 +0000
+      - Sun, 7 Jun 2020 06:55:08 GMT
       Strict-Transport-Security:
       - max-age=31536000
+      Set-Cookie:
+      - metabase.SESSION=bca8d83e-7d37-4670-81b6-560ac452773e;SameSite=Lax;HttpOnly;Path=/;Max-Age=1209600
+      - metabase.SESSION_ID=;Expires=Thu, 1 Jan 1970 00:00:00 GMT;Path=/
+      X-Permitted-Cross-Domain-Policies:
+      - none
+      Cache-Control:
+      - max-age=0, no-cache, must-revalidate, proxy-revalidate
+      X-Content-Type-Options:
+      - nosniff
+      Content-Security-Policy:
+      - default-src 'none'; script-src 'self' 'unsafe-eval' https://maps.google.com
+        https://apis.google.com https://www.google-analytics.com https://*.googleapis.com
+        *.gstatic.com  'sha256-lMAh4yjVuDkQ9NqkK4H+YHUga+anpFs5JAuj/uZh0Rs=' 'sha256-sMNbXyc1lLzhHbH/CKs11HIQMnMkZAN2eA99WhJeEC0='
+        'sha256-JJa56hyDfUbgNfq+0nq6Qs866JKgZ/+qCq2pkDJED8k='; child-src 'self' https://accounts.google.com;
+        style-src 'self' 'unsafe-inline'; font-src 'self' ; img-src * 'self' data:;
+        connect-src 'self' metabase.us10.list-manage.com ; manifest-src 'self';
       Content-Type:
-      - application/json; charset=utf-8
+      - application/json;charset=utf-8
+      Expires:
+      - Tue, 03 Jul 2001 06:00:00 GMT
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.2.z-SNAPSHOT)
+      - Jetty(9.4.27.v20200227)
     body:
       encoding: ASCII-8BIT
-      string: '{"id":"05500bc8-f39a-46b6-a77a-6254306450d8"}'
-    http_version: 
-  recorded_at: Tue, 22 May 2018 14:07:29 GMT
+      string: '{"id":"bca8d83e-7d37-4670-81b6-560ac452773e"}'
+  recorded_at: Sun, 07 Jun 2020 06:55:08 GMT
 - request:
     method: delete
-    uri: http://localhost:3030/api/session?session_id=05500bc8-f39a-46b6-a77a-6254306450d8
+    uri: http://localhost:3030/api/session?session_id=bca8d83e-7d37-4670-81b6-560ac452773e
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - MetabaseRuby/0.1.0 (ruby2.5.1)
+      - MetabaseRuby/0.4.0 (ruby2.7.1)
       X-Metabase-Session:
-      - 05500bc8-f39a-46b6-a77a-6254306450d8
+      - bca8d83e-7d37-4670-81b6-560ac452773e
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -62,20 +79,39 @@ http_interactions:
       message: No Content
     headers:
       Date:
-      - Tue, 22 May 2018 14:07:33 GMT
-      Cache-Control:
-      - max-age=0, no-cache, must-revalidate, proxy-revalidate
-      Expires:
-      - Tue, 03 Jul 2001 06:00:00 GMT
+      - Sun, 07 Jun 2020 06:55:08 GMT
+      X-Frame-Options:
+      - DENY
+      X-Xss-Protection:
+      - 1; mode=block
       Last-Modified:
-      - Tue, 22 May 2018 14:07:33 +0000
+      - Sun, 7 Jun 2020 06:55:08 GMT
       Strict-Transport-Security:
       - max-age=31536000
+      Set-Cookie:
+      - metabase.SESSION=;Expires=Thu, 1 Jan 1970 00:00:00 GMT;Path=/
+      - metabase.SESSION_ID=;Expires=Thu, 1 Jan 1970 00:00:00 GMT;Path=/
+      X-Permitted-Cross-Domain-Policies:
+      - none
+      Cache-Control:
+      - max-age=0, no-cache, must-revalidate, proxy-revalidate
+      X-Content-Type-Options:
+      - nosniff
+      Content-Security-Policy:
+      - default-src 'none'; script-src 'self' 'unsafe-eval' https://maps.google.com
+        https://apis.google.com https://www.google-analytics.com https://*.googleapis.com
+        *.gstatic.com  'sha256-lMAh4yjVuDkQ9NqkK4H+YHUga+anpFs5JAuj/uZh0Rs=' 'sha256-sMNbXyc1lLzhHbH/CKs11HIQMnMkZAN2eA99WhJeEC0='
+        'sha256-JJa56hyDfUbgNfq+0nq6Qs866JKgZ/+qCq2pkDJED8k='; child-src 'self' https://accounts.google.com;
+        style-src 'self' 'unsafe-inline'; font-src 'self' ; img-src * 'self' data:;
+        connect-src 'self' metabase.us10.list-manage.com ; manifest-src 'self';
+      Content-Type:
+      - application/json;charset=utf-8
+      Expires:
+      - Tue, 03 Jul 2001 06:00:00 GMT
       Server:
-      - Jetty(9.2.z-SNAPSHOT)
+      - Jetty(9.4.27.v20200227)
     body:
       encoding: UTF-8
       string: ''
-    http_version: 
-  recorded_at: Tue, 22 May 2018 14:07:29 GMT
-recorded_with: VCR 4.0.0
+  recorded_at: Sun, 07 Jun 2020 06:55:08 GMT
+recorded_with: VCR 6.0.0
